[package]
name = "tueue"
version = "0.2.0"
edition = "2024"
authors = ["amatagonsk"]
license = "MIT"
description = "tueue is tui pueue status monitor."
repository = "https://github.com/amatagonsk/tueue"
keywords = ["pueue", "terminal", "ratatui", "tui"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui ="0.29"
color-eyre = "0.6"
strum = { version = "0.27", features = ["derive"] }
tokio = "1.45"
tokio-util = "0.7"
futures = "0.3"
serde = "1"
serde_derive = "1"
crossterm = "0.29"
ansi-to-tui = "7"
fast-strip-ansi = "0.11.0"
# [dev-dependencies]
