[package]
name = "tueue"
version = "0.3.0"
edition = "2024"
authors = ["amatagonsk"]
license = "MIT"
description = "tueue is tui pueue status monitor."
repository = "https://github.com/amatagonsk/tueue"
keywords = ["pueue", "terminal", "ratatui", "tui"]
categories = ["command-line-utilities"]
readme = "readme.md"

[dependencies]
ratatui ="0.30"
color-eyre = "0.6"
crossterm = "0.29"
ansi-to-tui = "8.0"
fast-strip-ansi = "0.13"
